# esp32_weather_logger

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.ci  sdkconfig.old
_build/: .ninja_deps  .ninja_log  CMakeCache.txt  app-flash_args  cmake_install.cmake  config.env  flash_args  flash_args.in  flasher_args.json  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  partition-table-flash_args  phy-flash_args  project_description.json
_build/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
_build/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
_build/esp-idf/: cmake_install.cmake
components/Adafruit-GFX-Library/: Adafruit_GFX.cpp  Adafruit_GFX.h  CMakeLists.txt  Print.h
components/Adafruit_BMP280_Library/: CMakeLists.txt
components/Adafruit_HTU21DF/: CMakeLists.txt
components/Adafruit_SSD1306/: Adafruit_SSD1306.cpp  Adafruit_SSD1306.h  splash.h
components/BH1750/: CMakeLists.txt
components/sntp_sync/: CMakeLists.txt  Kconfig.projbuild  Makefile  sntp_sync.cpp  sntp_sync.h
main/: CMakeLists.txt  Kconfig.projbuild  app.h  app_global_helper.cpp  camera_helper.cpp  camera_helper.h  camera_pin.h  component.mk  main.cpp  setup.h
main/kk_http_app/src/: kk_http_app.cpp  kk_http_app.h  kk_http_server_setup.cpp  kk_http_server_setup.h
main/tasks/: stats_task.cpp  tasks.h  vCameraTask.cpp  vDHT11Task.cpp  vDisplayTask.cpp  vRTCTask.cpp  vSDAVGLGTask.cpp  vSDCSVLGTask.cpp  vSDJSLGTask.cpp  vSDLOGTask.cpp  vSDMMCTask.cpp  vSensorsTask.cpp  vStatsTask.cpp
(+208 files in other folders)
